fix styling when dark mode is enabled

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,11 +4,16 @@
   --color-primary-yellow: 254, 186, 2;
 }
 
+body {
+  background: white;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color: #000000;
 }
 
 .logo {
