--- a/client/src/components/AddTask.scss
+++ b/client/src/components/AddTask.scss
@@ -19,6 +19,7 @@
         font-size: 16px;
         outline: none;
         transition: all 0.3s ease-in-out;
+        background: #FFFFFF;
 
         &:focus {
             border: 1px solid rgb(var(--color-secondary-blue));
